# Django_Blog

./: .gitignore  README.md  deplop.yaml  index.html  install.md  install.txt  poetry.yaml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: blog_azure-django-web copy.yml  blog_azure-django-web-1.yml  blog_azure-django-web-test.yml  blog_azure-django-web.yml  deplop.yaml  poetry.yaml  poetry_error.yml
firstproject/: Procfile  requirements.txt
firstproject/.github/workflows/: main.yaml
firstproject/TestModel/: models.py
firstproject/TestModel/migrations/: 0001_initial.py
firstproject/firstproject/: settings.py  testdb.py  urls.py  wsgi.py
firstproject/myblog/: admin.py  forms.py  models.py  my_tags.py  tests.py  views.py
firstproject/myblog/migrations/: 0001_initial.py  0002_tag_post_delete_blogarticle.py  0003_rename_user_login_user_alter_post_author.py
firstproject/myblog/templates/: about_me.html  base.html  blog_post_detail.html  footer.html  index.html  portfolio.html  tag_detail.html  youtube_music.html
firstproject/static/: about_me.md
firstproject/static/CodeHilite/: markdown_copycode.js  styles.css
firstproject/staticfiles/: about_me.md  staticfiles.json
firstproject/templates/: Register Account.html  about.html  base.html  blog.html  blog_post_detail.html  dice.html  djget.html  djpost.html  footer.html  header.html  hello3.html  hello4.html  index copy.html  index.html  index1.html  index2.html  index3.html  navbar.html  new_post.html  portfolio.html  post_detail.html  show.html  tag_detail.html  test.html
(+12 files in other folders)
