[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["tn00627974 <139155210+tn00627974@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
pymysql = "^1.1.0"
markdown = "^3.6"
django-select2 = "^8.1.2"
poetry-dotenv = "^0.4.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
